--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>2048</title>
+	<title>Breaking LKS Code - 2048</title>
 	<style type="text/css">
 		html, body{
 			width: 100%;
 			height: 100%;
 			margin: 0;
+			overflow: hidden;
 		}
 		.container{
 			display: flex;
@@ -19,9 +20,20 @@
 			margin: auto;
 			border: 2px solid #333;
 		}
+		#score{
+			background: #eee;
+			padding: 20px;
+			color: #333;
+			border-radius: 5px;
+			text-align: center;
+			font-weight: bold;
+			font-size: 24px;
+		}
 	</style>
 </head>
 <body>
+
+	<div id="score"></div>
 
 	<div class="container">
 		<canvas id="canvas" width="480" height="480"></canvas>
